# graph-calc

./: .gitignore  CMakeLists.txt  README.md  main.cpp
shaders/: background.frag  background.vert  default.frag  default.vert
src/: plug.cpp  plug.hpp
